kubernetes/apps/external/zigbee2mqtt/app/httproute.yaml
---
# yaml-language-server: $schema=https://schemas.tholinka.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: &app zigbee2mqtt
  namespace: external
  annotations:
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/group: Home
    gethomepage.dev/name: Zigbee2MQTT
    gethomepage.dev/icon: zigbee2mqtt.svg
    gethomepage.dev/href: https://zigbee2mqtt.${SECRET_DOMAIN}
spec:
  hostnames:
    - 'zigbee2mqtt.${SECRET_DOMAIN}'
  parentRefs:
    - name: internal
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: *app
          port: 8080
      matches:
        - path:
            type: PathPrefix
            value: /
